fixed radom gap betwen projec title and projects

--- a/src/Project.css
+++ b/src/Project.css
@@ -21,16 +21,17 @@
   transform: translate(-50%, -90%);
   font-size: 6vw;
 }
-.projectContainer {
+.tempProj {
   position: absolute;
+  margin-top: 5vw;
+}
+.projectContainer {
   left: 50%;
-  transform: translate(-50%, 0);
+  margin-left: auto;
+  margin-right: auto;
   width: 70%;
   display: flex;
   justify-content: space-around;
-  margin-top: 3vw;
-  padding: 0;
-  outline: 1px solid yellow;
 }
 .projectImage {
   width: auto;
@@ -58,4 +59,7 @@
 }
 .projectDesc {
   font-size: 1.4vw;
+}
+.overallContainer {
+  position: relative;
 }
